# docker_secrets

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.http
src/: app.py  settings.py
src/env/local/: .env.dist
src/lib/: secrets.py
